--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^18.2.42",
     "@types/react-dom": "^18.2.17",
     "aos": "^3.0.0-beta.6",
+    "axios": "^1.7.7",
     "next": "^14.0.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -24,9 +25,9 @@
     "@tailwindcss/forms": "^0.5.7",
     "@types/aos": "^3.0.7",
     "@types/uuid": "^10.0.0",
-    "uuid": "^10.0.0",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
-    "tailwindcss": "^3.3.6"
+    "tailwindcss": "^3.3.6",
+    "uuid": "^10.0.0"
   }
 }
