--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@headlessui/react": "^2.1.3",
     "@types/node": "^22.5.0",
     "@types/react": "^18.2.42",
@@ -18,6 +21,7 @@
     "next": "^14.0.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-loading": "^2.0.3",
     "typescript": "^5.3.3",
     "uuid": "^10.0.0"
